# backup-rs

./: .travis.yml  Cargo.toml  README.md
examples/: backup.toml
src/: lib.rs  main.rs
tests/: sync_test.rs
tests/resources/configuration/: backup-incomplete.toml  backup-invalid.toml  backup.toml
